# ClarityCare

./: README.md  pyproject.toml
src/claritycare/: crew.py  main.py
src/claritycare/config/: agents.yaml  tasks.yaml
