[project]
name = "claritycare"
version = "0.1.0"
description = "claritycare using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
claritycare = "claritycare.main:run"
run_crew = "claritycare.main:run"
train = "claritycare.main:train"
replay = "claritycare.main:replay"
test = "claritycare.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
